# starnavi-testing

./: .dockerignore  .env.template  .gitignore  Dockerfile  Dockerfile.nginx  README.md  bot.py  config.ini.template  docker-compose.yml  pyproject.toml
db/: __init__.py  core.py  sa_models.py
db/models/: __init__.py  like.py  post.py  user.py
db/repositories/: __init__.py
db/repositories/mysql/: __init__.py  base.py  likes.py  posts.py
migrations/: env.py
migrations/versions/: d566fd96ec54_add_init_tables.py
resources/nginx/conf.d/: default.conf
tests/data/: likes.json  posts.json  users.json
tests/test_api/: conftest.py  test_analytics.py  test_auth.py  test_posts.py
tests/test_db/: conftest.py  test_repos.py
utils/: bot_config.py  config.py
web/: __init__.py  auth.py  dependecies.py
web/routers/: __init__.py  analytics.py  auth.py  posts.py
web/schemas/: __init__.py  base.py  likes.py  post.py  token.py  user.py
